--- a/src/app/modules/deck-builder/crypt-builder/crypt-builder.component.html
+++ b/src/app/modules/deck-builder/crypt-builder/crypt-builder.component.html
@@ -2,7 +2,7 @@
   <div class="modal-header">
     <h4 class="modal-title">{{ 'crypt_builder.title' | transloco }}</h4>
     <button type="button" class="btn-close" [attr.aria-label]="'shared.close' | transloco"
-      (click)="modal.dismiss()"></button>
+    (click)="modal.dismiss()"></button>
 
   </div>
   <div class="modal-header">
@@ -11,71 +11,83 @@
         <div class="col mb-2">
           <input type="text" class="form-control rounded-3" id="name" [placeholder]="t('card_name')"
             [formControl]="nameFormControl">
-        </div>
-        <div ngbDropdown class="col-auto d-inline-block">
-          <button type="button" class="btn btn-primary" id="dropdownSortBy" ngbDropdownToggle>
-            <i class="bi bi-sort-alpha-down"></i>
-          </button>
-          <div ngbDropdownMenu aria-labelledby="dropdownSortBy">
-            <button ngbDropdownItem (click)="onChangeSortBy('relevance',$event)"
-              [ngClass]="{'active': sortBy ==='relevance'}">
-              {{ t('relevance') }}
+          </div>
+          <div ngbDropdown class="col-auto d-inline-block">
+            <button type="button" class="btn btn-primary" id="dropdownSortBy" ngbDropdownToggle>
+              <i class="bi bi-sort-alpha-down"></i>
             </button>
-            <button ngbDropdownItem (click)="onChangeSortBy('name',$event)" [ngClass]="{'active': sortBy ==='name'}">
-              {{ t('name') }}
-            </button>
-            <button ngbDropdownItem (click)="onChangeSortBy('capacity',$event)"
-              [ngClass]="{'active': sortBy ==='capacity'}">
-              {{ t('capacity') }}
-            </button>
-            <button ngbDropdownItem (click)="onChangeSortBy('clan',$event)" [ngClass]="{'active': sortBy ==='clan'}">
-              {{ t('clan') }}
-            </button>
-            <button ngbDropdownItem (click)="onChangeSortBy('group',$event)" [ngClass]="{'active': sortBy ==='group'}">
-              {{ t('group') }}
-            </button>
-            <button ngbDropdownItem (click)="onChangeSortBy('deckPopularity',$event)"
-              [ngClass]="{'active': sortBy ==='deckPopularity'}" [title]="t('deck_popularity_title')">
-              {{ t('deck_popularity') }}
-            </button>
-            <button ngbDropdownItem (click)="onChangeSortBy('cardPopularity',$event)"
-              [ngClass]="{'active': sortBy ==='cardPopularity'}" [title]="t('card_popularity_title')">
-              {{ t('card_popularity') }}
+            <div ngbDropdownMenu aria-labelledby="dropdownSortBy">
+              <button ngbDropdownItem (click)="onChangeSortBy('relevance',$event)"
+                [ngClass]="{'active': sortBy ==='relevance'}">
+                {{ t('relevance') }}
+              </button>
+              <button ngbDropdownItem (click)="onChangeSortBy('name',$event)" [ngClass]="{'active': sortBy ==='name'}">
+                {{ t('name') }}
+              </button>
+              <button ngbDropdownItem (click)="onChangeSortBy('capacity',$event)"
+                [ngClass]="{'active': sortBy ==='capacity'}">
+                {{ t('capacity') }}
+              </button>
+              <button ngbDropdownItem (click)="onChangeSortBy('clan',$event)" [ngClass]="{'active': sortBy ==='clan'}">
+                {{ t('clan') }}
+              </button>
+              <button ngbDropdownItem (click)="onChangeSortBy('group',$event)" [ngClass]="{'active': sortBy ==='group'}">
+                {{ t('group') }}
+              </button>
+              <button ngbDropdownItem (click)="onChangeSortBy('deckPopularity',$event)"
+                [ngClass]="{'active': sortBy ==='deckPopularity'}" [title]="t('deck_popularity_title')">
+                {{ t('deck_popularity') }}
+              </button>
+              <button ngbDropdownItem (click)="onChangeSortBy('cardPopularity',$event)"
+                [ngClass]="{'active': sortBy ==='cardPopularity'}" [title]="t('card_popularity_title')">
+                {{ t('card_popularity') }}
+              </button>
+            </div>
+          </div>
+          @if (!(isMobileOrTablet$ | async)!) {
+            <div class="col-auto d-inline-block">
+              <button type="button" class="btn btn-danger" (click)="initFilters()">
+                <i class="bi bi-arrow-clockwise"></i>{{ t('reset') }}
+              </button>
+            </div>
+          }
+          @if ((isMobileOrTablet$ | async)!) {
+            <div class="col-auto">
+              <button type="button" class="btn btn-secondary" (click)="openModal(filterModal)">
+                <i class="bi bi-funnel-fill"></i>@if (!(isMobile$ | async)!) {
+                <span>{{ t('filters') }}</span>
+              }
             </button>
           </div>
-        </div>
-        <div class="col-auto d-inline-block" *ngIf="!(isMobileOrTablet$ | async)!">
-          <button type="button" class="btn btn-danger" (click)="initFilters()">
-            <i class="bi bi-arrow-clockwise"></i>{{ t('reset') }}
-          </button>
-        </div>
-        <div class="col-auto" *ngIf="(isMobileOrTablet$ | async)!">
-          <button type="button" class="btn btn-secondary" (click)="openModal(filterModal)">
-            <i class="bi bi-funnel-fill"></i><span *ngIf="!(isMobile$ | async)!">{{ t('filters') }}</span>
-          </button>
-        </div>
+        }
       </div>
     </form>
   </div>
   <div class="modal-body">
     <div class="row">
-      <div class="col-4" *ngIf="!(isMobileOrTablet$ | async)">
-        <ng-container *ngTemplateOutlet="filter"></ng-container>
-      </div>
+      @if (!(isMobileOrTablet$ | async)) {
+        <div class="col-4">
+          <ng-container *ngTemplateOutlet="filter"></ng-container>
+        </div>
+      }
       <div [ngClass]="{
       'col-12': (isMobileOrTablet$ | async),
       'col-8': !(isMobileOrTablet$ | async)
     }" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50" infiniteScrollContainer=".modal-body"
         [fromRoot]="true" [alwaysCallback]="true" (scrolled)="onScroll()">
-        <div class="d-flex justify-content-center mt-2" *ngIf="(crypt$ | async)!.length === 0">
-          <button type="button" class="btn btn-danger btn-lg" (click)="initFilters()">
-            {{ t('reset_filters') }}
-          </button>
-        </div>
-        <ul class="col list-group" *ngFor="let crypt of (crypt$ | async)! ; trackBy: trackByFn">
-          <app-crypt [card]="getCard(crypt)" [cryptSize]="(cryptSize$ | async)!" [withControls]="true"
+        @if ((crypt$ | async)!.length === 0) {
+          <div class="d-flex justify-content-center mt-2">
+            <button type="button" class="btn btn-danger btn-lg" (click)="initFilters()">
+              {{ t('reset_filters') }}
+            </button>
+          </div>
+        }
+        @for (crypt of (crypt$ | async)! ; track trackByFn($index, crypt)) {
+          <ul class="col list-group">
+            <app-crypt [card]="getCard(crypt)" [cryptSize]="(cryptSize$ | async)!" [withControls]="true"
             (cardAdded)="addCard($event)" (cardRemoved)="removeCard($event)"></app-crypt>
-        </ul>
+          </ul>
+        }
       </div>
     </div>
   </div>
@@ -84,7 +96,7 @@
     <div class="modal-header">
       <h4 class="modal-title" id="modal-basic-title"><i class="bi bi-funnel-fill"></i>{{ t('filters') }}</h4>
       <button type="button" class="btn-close" [attr.aria-label]="'shared.close' | transloco"
-        (click)="modal.dismiss()"></button>
+      (click)="modal.dismiss()"></button>
     </div>
     <div class="modal-body">
       <ng-container *ngTemplateOutlet="filter"></ng-container>
