--- a/src/app/modules/deck-builder/crypt-section/crypt-section.component.html
+++ b/src/app/modules/deck-builder/crypt-section/crypt-section.component.html
@@ -36,74 +36,89 @@
               </button>
             </div>
           </div>
-          <div class="col-auto d-inline-block" *ngIf="!(isMobileOrTablet$ | async)!">
-            <button type="button" class="btn btn-danger" (click)="initFilters()">
-              <i class="bi bi-arrow-clockwise"></i> {{ t('reset') }}
+          @if (!(isMobileOrTablet$ | async)!) {
+            <div class="col-auto d-inline-block">
+              <button type="button" class="btn btn-danger" (click)="initFilters()">
+                <i class="bi bi-arrow-clockwise"></i> {{ t('reset') }}
+              </button>
+            </div>
+          }
+          @if ((isMobileOrTablet$ | async)!) {
+            <div class="col-auto">
+              <button type="button" class="btn btn-secondary" (click)="openModal(filterModal)">
+                <i class="bi bi-funnel-fill"></i>@if (!(isMobile$ | async)!) {
+                <span> {{ t('filters') }}</span>
+              }
             </button>
           </div>
-          <div class="col-auto" *ngIf="(isMobileOrTablet$ | async)!">
-            <button type="button" class="btn btn-secondary" (click)="openModal(filterModal)">
-              <i class="bi bi-funnel-fill"></i><span *ngIf="!(isMobile$ | async)!"> {{ t('filters') }}</span>
-            </button>
-          </div>
-        </div>
-      </form>
-    </header>
-    <div class="crypt-body">
-      <div class="row">
-        <div class="col-4" *ngIf="!(isMobileOrTablet$ | async) && (crypt$ | async)!">
+        }
+      </div>
+    </form>
+  </header>
+  <div class="crypt-body">
+    <div class="row">
+      @if (!(isMobileOrTablet$ | async) && (crypt$ | async)!) {
+        <div class="col-4">
           <ng-container *ngTemplateOutlet="filter"></ng-container>
         </div>
+      }
         <div [ngClass]="{
       'col-12': (isMobileOrTablet$ | async),
       'col-8': !(isMobileOrTablet$ | async)
     }" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="100" (scrolled)="onScroll()">
-          <strong class="d-flex justify-content-center" *ngIf="(isMobileOrTablet$ | async)">
+        @if ((isMobileOrTablet$ | async)) {
+          <strong class="d-flex justify-content-center">
             {{ t('results', { count: (resultsCount$ | async)! }) }}
-
           </strong>
-          <div class="d-flex justify-content-center mt-2" *ngIf="(crypt$ | async)?.length === 0">
+        }
+        @if ((crypt$ | async)?.length === 0) {
+          <div class="d-flex justify-content-center mt-2">
             <button type="button" class="btn btn-danger btn-lg" (click)="initFilters()">
               {{ t('reset_filters') }}
             </button>
           </div>
-          <ul class="col list-group" *ngFor="let crypt of (crypt$ | async)! ; trackBy: trackByFn">
+        }
+        @for (crypt of (crypt$ | async)! ; track trackByFn($index, crypt)) {
+          <ul class="col list-group">
             <app-crypt [card]="getCard(crypt)" (click)="openCryptCard(crypt)"
-              [disablePopover]="(isMobileOrTablet$ | async)!" [disableClickPopover]="true"></app-crypt>
+            [disablePopover]="(isMobileOrTablet$ | async)!" [disableClickPopover]="true"></app-crypt>
           </ul>
-        </div>
+        }
       </div>
     </div>
   </div>
+</div>
 
-  <button *ngIf="showScrollButton$ | async" class="btn btn-secondary btn-lg border back-to-top" placement="start"
+@if (showScrollButton$ | async) {
+  <button class="btn btn-secondary btn-lg border back-to-top" placement="start"
     [ngbTooltip]="t('back_to_top')" (click)="scrollToTop()">
     <i class="bi bi-chevron-up"></i>
   </button>
+}
 
-  <ng-template #filterModal let-modal>
-    <div class="modal-header">
-      <h4 class="modal-title" id="modal-basic-title"><i class="bi bi-funnel-fill"></i>{{ t('filters') }}</h4>
-      <button type="button" class="btn-close" [attr.aria-label]="'shared.close' | transloco"
-        (click)="modal.dismiss()"></button>
-    </div>
-    <div class="modal-body">
-      <ng-container *ngTemplateOutlet="filter"></ng-container>
-    </div>
-  </ng-template>
+<ng-template #filterModal let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title"><i class="bi bi-funnel-fill"></i>{{ t('filters') }}</h4>
+    <button type="button" class="btn-close" [attr.aria-label]="'shared.close' | transloco"
+    (click)="modal.dismiss()"></button>
+  </div>
+  <div class="modal-body">
+    <ng-container *ngTemplateOutlet="filter"></ng-container>
+  </div>
+</ng-template>
 
-  <ng-template #filter>
-    <strong class="float-end">
-      {{ t('results', { count: (resultsCount$ | async)! }) }}
-    </strong>
-    <app-crypt-builder-filter [(printOnDemand)]="printOnDemand" (printOnDemandChange)="onChangePrintOnDemand($event)"
-      [(clans)]="clans" (clansChange)="onChangeClanFilter($event)" [(disciplines)]="disciplines"
-      (disciplinesChange)="onChangeDisciplineFilter($event)" [(superiorDisciplines)]="superiorDisciplines"
-      (superiorDisciplinesChange)="onChangeSuperiorDisciplineFilter($event)" [(groupSlider)]="groupSlider"
-      (groupSliderChange)="onChangeGroupSliderFilter($event)" [(capacitySlider)]="capacitySlider"
-      (capacitySliderChange)="onChangeCapacitySliderFilter($event)" [(title)]="title"
-      (titleChange)="onChangeTitleFilter($event)" [(sect)]="sect" (sectChange)="onChangeSectFilter($event)"
-      [(taints)]="taints" (taintsChange)="onChangeTaintsFilter($event)">
-    </app-crypt-builder-filter>
-  </ng-template>
+<ng-template #filter>
+  <strong class="float-end">
+    {{ t('results', { count: (resultsCount$ | async)! }) }}
+  </strong>
+  <app-crypt-builder-filter [(printOnDemand)]="printOnDemand" (printOnDemandChange)="onChangePrintOnDemand($event)"
+    [(clans)]="clans" (clansChange)="onChangeClanFilter($event)" [(disciplines)]="disciplines"
+    (disciplinesChange)="onChangeDisciplineFilter($event)" [(superiorDisciplines)]="superiorDisciplines"
+    (superiorDisciplinesChange)="onChangeSuperiorDisciplineFilter($event)" [(groupSlider)]="groupSlider"
+    (groupSliderChange)="onChangeGroupSliderFilter($event)" [(capacitySlider)]="capacitySlider"
+    (capacitySliderChange)="onChangeCapacitySliderFilter($event)" [(title)]="title"
+    (titleChange)="onChangeTitleFilter($event)" [(sect)]="sect" (sectChange)="onChangeSectFilter($event)"
+    [(taints)]="taints" (taintsChange)="onChangeTaintsFilter($event)">
+  </app-crypt-builder-filter>
+</ng-template>
 </ng-container>
