--- a/src/app/modules/deck-shared/clan-filter/clan-filter.component.html
+++ b/src/app/modules/deck-shared/clan-filter/clan-filter.component.html
@@ -1,13 +1,15 @@
-<span *ngIf="showNotRequired" (click)="toggleNotRequired()" [title]="'shared.not_required' | transloco">
+@if (showNotRequired) {
+  <span (click)="toggleNotRequired()" [title]="'shared.not_required' | transloco">
   <i class="btn-icon vtes-big noclan" [ngClass]="{
     'non-selected': !isSelected('none')
   }"></i>
-</span>
-<ng-container *ngFor="let clan of clansList">
+  </span>
+}
+@for (clan of clansList; track clan) {
   <span (click)="toggle(clan.name)" [title]="clan.label | transloco">
     <i class="btn-icon vtes-big" [class]="clan.icon" [ngClass]="{
         'non-selected': !isSelected(clan.name),
         'bg-dark': isSelected(clan.name)
       }"></i>
   </span>
-</ng-container>
+}
