--- a/src/app/modules/deck-shared/library-card/library-card.component.html
+++ b/src/app/modules/deck-shared/library-card/library-card.component.html
@@ -1,48 +1,54 @@
 <ng-container *transloco="let t; read: 'deck_shared'">
-  <div class="library-card" *ngIf="cardList[index] as card">
-    <div class="row">
-      <div class="col-sm-12 col-md-5 pe-0 bg-black">
-        @if( card.i18n && card.i18n.image ){
-        <img #i18nImage class="rounded mx-auto d-block img-fluid" [src]="'/assets' + card.i18n.image"
-          [alt]="card.i18n.name" (error)="i18nImage.src='/assets' + card.image" />
-        }
-        @else {
-        <img class="rounded mx-auto d-block img-fluid" [src]="'/assets' + card.image" [alt]="card.name" />
-        }
-      </div>
-      <div class="col-sm-12 col-md-7 ps-0">
-        <div class="modal-header">
-          <h4 class="modal-title d-flex align-items-center">
-            <i *ngFor="let typeIcon of card.typeIcons" class="vtes vtes-big float-start" [ngClass]="typeIcon"></i>
-            <span class="d-flex flex-column">
-              @if( card.i18n && card.i18n.name !== card.name ){
-              <span>
-                {{ card.i18n.name }}
-              </span>
-              <span class="text-muted default-locale-name">
-                {{ card.name }}
-              </span>
+  @if (cardList[index]; as card) {
+    <div class="library-card">
+      <div class="row">
+        <div class="col-sm-12 col-md-5 pe-0 bg-black">
+          @if( card.i18n && card.i18n.image ){
+            <img #i18nImage class="rounded mx-auto d-block img-fluid" [src]="'/assets' + card.i18n.image"
+              [alt]="card.i18n.name" (error)="i18nImage.src='/assets' + card.image" />
+            }
+            @else {
+            <img class="rounded mx-auto d-block img-fluid" [src]="'/assets' + card.image" [alt]="card.name" />
+          }
+        </div>
+        <div class="col-sm-12 col-md-7 ps-0">
+          <div class="modal-header">
+            <h4 class="modal-title d-flex align-items-center">
+              @for (typeIcon of card.typeIcons; track typeIcon) {
+                <i class="vtes vtes-big float-start" [ngClass]="typeIcon"></i>
               }
-              @else{
-              <span>
-                {{ card.name }}
-              </span>
-              @if(card.aka && card.aka !== card.name){
-              <span class="text-muted default-locale-name">
-                {{ card.aka }}
-              </span>
-              }
+              <span class="d-flex flex-column">
+                @if( card.i18n && card.i18n.name !== card.name ){
+                  <span>
+                    {{ card.i18n.name }}
+                  </span>
+                  <span class="text-muted default-locale-name">
+                    {{ card.name }}
+                  </span>
+                }
+                @else{
+                <span>
+                  {{ card.name }}
+                </span>
+                @if(card.aka && card.aka !== card.name){
+                  <span class="text-muted default-locale-name">
+                    {{ card.aka }}
+                  </span>
+                }
               }
             </span>
           </h4>
           <button type="button" class="btn-close" [attr.aria-label]="'shared.close' | transloco"
-            (click)="modal.dismiss('Cross click')"></button>
+          (click)="modal.dismiss('Cross click')"></button>
         </div>
         <div class="modal-body flex-wrap">
-          <span *ngIf="card.trifle" class="badge rounded-pill bg-dark text-white d-none d-sm-inline ms-1 float-end">
-            {{ 'vtes.type.trifle' | transloco }}
-          </span>
-          <i *ngIf="card.bloodCost" class="vtes float-end me-1" [ngClass]="{
+          @if (card.trifle) {
+            <span class="badge rounded-pill bg-dark text-white d-none d-sm-inline ms-1 float-end">
+              {{ 'vtes.type.trifle' | transloco }}
+            </span>
+          }
+          @if (card.bloodCost) {
+<i class="vtes float-end me-1" [ngClass]="{
             'bloodx': card.bloodCost < 0,
             'blood1': card.bloodCost === 1,
             'blood2': card.bloodCost === 2,
@@ -50,7 +56,9 @@
             'blood4': card.bloodCost === 4,
             'bloodcost': card.bloodCost > 4
           }"></i>
-          <i *ngIf="card.poolCost" class="vtes float-end me-1" [ngClass]="{
+          }
+          @if (card.poolCost) {
+<i class="vtes float-end me-1" [ngClass]="{
             'poolx': card.poolCost < 0,
             'pool1': card.poolCost === 1,
             'pool2': card.poolCost === 2,
@@ -60,88 +68,111 @@
             'pool6': card.poolCost === 6,
             'poolcost': card.poolCost > 6
           }"></i>
-          <i class="vtes float-end me-1" *ngFor="let discipline of card.disciplineIcons" [ngClass]="discipline"></i>
-          <i *ngIf="card.burn" class="vtes float-end burnoption me-1"></i>
-          <i *ngFor="let clanIcon of card.clanIcons" class="vtes float-end me-1" [ngClass]="clanIcon"></i>
+          }
+          @for (discipline of card.disciplineIcons; track discipline) {
+            <i class="vtes float-end me-1" [ngClass]="discipline"></i>
+          }
+          @if (card.burn) {
+            <i class="vtes float-end burnoption me-1"></i>
+          }
+          @for (clanIcon of card.clanIcons; track clanIcon) {
+            <i class="vtes float-end me-1" [ngClass]="clanIcon"></i>
+          }
           <p><strong>{{ t('sets') }}:&nbsp;</strong>
-            <span class="badge text-bg-secondary me-1" *ngFor="let set of card.sets" #tooltip="ngbTooltip"
+          @for (set of card.sets; track set) {
+            <span class="badge text-bg-secondary me-1" #tooltip="ngbTooltip"
               [ngbTooltip]="setContent" triggers="mouseenter:mouseleave" container="body" (click)="tooltip.open()">
               {{ set }}&nbsp;
               <ng-template #setContent>
                 <app-set-tooltip [cardId]="card.id" [set]="set"></app-set-tooltip>
               </ng-template>
             </span>
-          </p>
-          <p>
-
-            <strong>{{ t('artist') }}: </strong>{{ card.artist }}
-            <!--TODO: Implement artist filter-->
-            <!--a class="text-decoration-none" routerLink="/cards/crypt"
-            [queryParams]="{ artist: card.artist }" (click)="modal.dismiss('Link click')">
-            {{ card.artist }}
-          </a-->
-          </p>
-          <ng-container *ngIf="(krcgCard$ | async)?.rulings as krcgRulings">
-            <strong>{{ t('rulings') }}</strong>
-            <ul>
-              <li *ngFor="let ruling of krcgRulings">
-                <app-ruling-text [ruling]="ruling"></app-ruling-text>
-              </li>
-            </ul>
-          </ng-container>
-          <ng-container *ngIf="(preconstructedDecks$ | async)?.decks as decks">
-            <ng-container *ngIf="card.printOnDemand || decks.length > 0">
-              <strong>{{ t('where_find') }}</strong>
-              <ul>
-                <li *ngFor="let shop of (shops$ | async)!">
-                  <ng-container *ngIf="getShopInfo(shop.platform) as shopInfo">
-                    <a class="text-decoration-none" [href]="shop.link" target="_blank" gaEvent="purchase"
-                      [gaCategory]="shop.platform" [gaLabel]="card.name">
-                      {{ shopInfo.name }}
-                    </a>
-                  </ng-container>
-                </li>
-                <li *ngFor="let deck of decks">
-                  <a class="text-decoration-none" [routerLink]="'/deck/'+deck.id" (click)="modal.dismiss('Link click')">
-                    {{ deck.name }} ({{ deck.year }})
+          }
+        </p>
+        <p>
+          <strong>{{ t('artist') }}: </strong>{{ card.artist }}
+          <!--TODO: Implement artist filter-->
+          <!--a class="text-decoration-none" routerLink="/cards/crypt"
+          [queryParams]="{ artist: card.artist }" (click)="modal.dismiss('Link click')">
+          {{ card.artist }}
+        </a-->
+      </p>
+      @if ((krcgCard$ | async)?.rulings; as krcgRulings) {
+        <strong>{{ t('rulings') }}</strong>
+        <ul>
+          @for (ruling of krcgRulings; track ruling) {
+            <li>
+              <app-ruling-text [ruling]="ruling"></app-ruling-text>
+            </li>
+          }
+        </ul>
+      }
+      @if ((preconstructedDecks$ | async)?.decks; as decks) {
+        @if (card.printOnDemand || decks.length > 0) {
+          <strong>{{ t('where_find') }}</strong>
+          <ul>
+            @for (shop of (shops$ | async)!; track shop) {
+              <li>
+                @if (getShopInfo(shop.platform); as shopInfo) {
+                  <a class="text-decoration-none" [href]="shop.link" target="_blank" gaEvent="purchase"
+                    [gaCategory]="shop.platform" [gaLabel]="card.name">
+                    {{ shopInfo.name }}
                   </a>
-                </li>
-              </ul>
-            </ng-container>
-          </ng-container>
-        </div>
-        <div class="modal-footer align-self-end">
-          <div class="row justify-content-between w-100">
-            <button type="button" class="btn btn-primary col-auto me-auto" [title]="t('search_title')"
-              routerLink="/decks" [queryParams]="{ cards: card.id+'=1' }" (click)="modal.dismiss('Link click')">
-              <i class="bi bi-search"></i> {{ t('search') }}
-            </button>
-            <ng-container *ngFor="let shop of (shops$ | async)!">
-              <ng-container *ngIf="getShopInfo(shop.platform) as shopInfo">
-                <a type="button" class="btn btn-success col-auto me-auto" [title]="t('buy', { name: shopInfo.name })"
-                  [href]="shop.link" target="_blank" gaEvent="purchase" [gaCategory]="shop.platform"
-                  [gaLabel]="card.name">
-                  <i class="bi bi-cart4"></i>
-                  <span *ngIf="!(isMobile$ | async)!">&nbsp;{{ shopInfo.name }}</span>
-                  <span *ngIf="(isMobile$ | async)!">&nbsp;{{ shopInfo.abbr }}</span>
+                }
+              </li>
+            }
+            @for (deck of decks; track deck) {
+              <li>
+                <a class="text-decoration-none" [routerLink]="'/deck/'+deck.id" (click)="modal.dismiss('Link click')">
+                  {{ deck.name }} ({{ deck.year }})
                 </a>
-              </ng-container>
-            </ng-container>
-            <small class="col-auto text-muted mt-2">#{{card.id}}</small>
-          </div>
-        </div>
+              </li>
+            }
+          </ul>
+        }
+      }
+    </div>
+    <div class="modal-footer align-self-end">
+      <div class="row justify-content-between w-100">
+        <button type="button" class="btn btn-primary col-auto me-auto" [title]="t('search_title')"
+          routerLink="/decks" [queryParams]="{ cards: card.id+'=1' }" (click)="modal.dismiss('Link click')">
+          <i class="bi bi-search"></i> {{ t('search') }}
+        </button>
+        @for (shop of (shops$ | async)!; track shop) {
+          @if (getShopInfo(shop.platform); as shopInfo) {
+            <a type="button" class="btn btn-success col-auto me-auto" [title]="t('buy', { name: shopInfo.name })"
+              [href]="shop.link" target="_blank" gaEvent="purchase" [gaCategory]="shop.platform"
+              [gaLabel]="card.name">
+              <i class="bi bi-cart4"></i>
+              @if (!(isMobile$ | async)!) {
+                <span>&nbsp;{{ shopInfo.name }}</span>
+              }
+              @if ((isMobile$ | async)!) {
+                <span>&nbsp;{{ shopInfo.abbr }}</span>
+              }
+            </a>
+          }
+        }
+        <small class="col-auto text-muted mt-2">#{{card.id}}</small>
       </div>
     </div>
   </div>
-  <div *ngIf="hasMore" class="card-button card-button-previous text-light ps-0 ps-md-5" [title]="t('previous_card')"
+</div>
+</div>
+}
+@if (hasMore) {
+  <div class="card-button card-button-previous text-light ps-0 ps-md-5" [title]="t('previous_card')"
     [ngClass]="{
   'opacity-75 card-button-mobile':(isMobile$ | async)!
 }" (click)="previousCard()">
     <i class="bi bi-fs-5x bi-caret-left-fill"></i>
   </div>
-  <div *ngIf="hasMore" class="card-button card-button-next text-light pe-0 pe-md-5" [title]="t('next_card')" [ngClass]="{
+}
+@if (hasMore) {
+<div class="card-button card-button-next text-light pe-0 pe-md-5" [title]="t('next_card')" [ngClass]="{
   'opacity-75 card-button-mobile':(isMobile$ | async)!
 }" (click)="nextCard()">
     <i class="bi bi-fs-5x bi-caret-right-fill"></i>
   </div>
+}
 </ng-container>
