--- a/src/app/modules/decks/decks.component.html
+++ b/src/app/modules/decks/decks.component.html
@@ -50,54 +50,70 @@
       </form>
     </header>
     <div class="row">
-      <div class="col-3" *ngIf="!(isMobileOrTablet$ | async)!">
-        <app-deck-filters #filters (resetFilters)="reset()"></app-deck-filters>
-      </div>
+      @if (!(isMobileOrTablet$ | async)!) {
+        <div class="col-3">
+          <app-deck-filters #filters (resetFilters)="reset()"></app-deck-filters>
+        </div>
+      }
       <main class="p-0" [ngClass]="{
         'col-12': (isMobileOrTablet$ | async),
         'col-9': !(isMobileOrTablet$ | async)
       }">
         <div class="decks-container" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="100"
           (scrolled)="onScroll()">
-          <ng-container *ngIf="(decks$ | async)! as decks">
-            <div class="col-12 px-2" *ngFor="let deck of decks">
-              <app-deck-card [deck]="deck" (tagClick)="onTagClick($event)"></app-deck-card>
-            </div>
-            <div class="d-flex justify-content-center" *ngIf="!(isLoading$ | async)! && decks.length === 0">
-              <button type="button" class="btn btn-danger btn-lg" (click)="resetFilters()">
-                {{ t('clear_filters') }}
-              </button>
-            </div>
-          </ng-container>
+          @if ((decks$ | async)!; as decks) {
+            @for (deck of decks; track deck) {
+              <div class="col-12 px-2">
+                <app-deck-card [deck]="deck" (tagClick)="onTagClick($event)"></app-deck-card>
+              </div>
+            }
+            @if (!(isLoading$ | async)! && decks.length === 0) {
+              <div class="d-flex justify-content-center">
+                <button type="button" class="btn btn-danger btn-lg" (click)="resetFilters()">
+                  {{ t('clear_filters') }}
+                </button>
+              </div>
+            }
+          }
         </div>
-        <div *ngIf="(restorableDecks$ | async)! as decks">
-          <div class="col-12 px-2">
-            <app-deck-restorable-card *ngFor="let deck of decks" [deck]="deck"></app-deck-restorable-card>
+        @if ((restorableDecks$ | async)!; as decks) {
+          <div>
+            <div class="col-12 px-2">
+              @for (deck of decks; track deck) {
+                <app-deck-restorable-card [deck]="deck"></app-deck-restorable-card>
+              }
+            </div>
           </div>
-        </div>
-        <div class="alert alert-light" *ngIf="isLoading$ | async">
-          <app-loading></app-loading>
-          <div style="height: 100vw"></div>
-        </div>
+        }
+        @if (isLoading$ | async) {
+          <div class="alert alert-light">
+            <app-loading></app-loading>
+            <div style="height: 100vw"></div>
+          </div>
+        }
       </main>
     </div>
   </div>
-  <button *ngIf="showScrollButton$ | async" class="btn btn-secondary btn-lg border back-to-top" placement="start"
-    [ngbTooltip]="t('back_to_top')" (click)="scrollToTop()">
-    <i class="bi bi-chevron-up"></i>
-  </button>
-  <button *ngIf="isMobileOrTablet$ | async" class="btn btn-primary btn-sm filters-mobile" placement="start"
-    [ngbTooltip]="t('show_filters')" (click)="openFilters(filtersMobile)">
-    <i class="bi bi-funnel-fill"></i>&nbsp;{{ t('filters') }}
-  </button>
+  @if (showScrollButton$ | async) {
+    <button class="btn btn-secondary btn-lg border back-to-top" placement="start"
+      [ngbTooltip]="t('back_to_top')" (click)="scrollToTop()">
+      <i class="bi bi-chevron-up"></i>
+    </button>
+  }
+  @if (isMobileOrTablet$ | async) {
+    <button class="btn btn-primary btn-sm filters-mobile" placement="start"
+      [ngbTooltip]="t('show_filters')" (click)="openFilters(filtersMobile)">
+      <i class="bi bi-funnel-fill"></i>&nbsp;{{ t('filters') }}
+    </button>
+  }
   <ng-template #filtersMobile let-offcanvas>
     <div class="offcanvas-header">
       <h4 class="offcanvas-title" id="offcanvas-basic-title"><i class="bi bi-funnel-fill"></i>&nbsp;{{ t('filters') }}
-      </h4>
-      <button type="button" class="btn-close" aria-label="Close" (click)="offcanvas.dismiss('Cross click')"></button>
-    </div>
-    <div class="offcanvas-body">
-      <app-deck-filters #filters (resetFilters)="reset()"></app-deck-filters>
-    </div>
-  </ng-template>
+    </h4>
+    <button type="button" class="btn-close" aria-label="Close" (click)="offcanvas.dismiss('Cross click')"></button>
+  </div>
+  <div class="offcanvas-body">
+    <app-deck-filters #filters (resetFilters)="reset()"></app-deck-filters>
+  </div>
+</ng-template>
 </ng-container>
