--- a/src/app/modules/home/home-section/home-section.component.html
+++ b/src/app/modules/home/home-section/home-section.component.html
@@ -3,25 +3,30 @@
     <h5>{{ title | titlecase }}</h5>
   </div>
   <div class="card-body p-0 py-2">
-    <div class="container-fluid" *ngIf="decks; else loading">
-      <div class="row">
-        <div class="col-12" *ngFor="let deck of decks">
-          <app-deck-card [deck]="deck" height="170px" (tagClick)="onTagClick($event)"></app-deck-card>
-        </div>
-      </div>
-    </div>
-    <ng-template #loading>
+    @if (decks) {
       <div class="container-fluid">
         <div class="row">
-          <div class="col-12" *ngFor="let item of [].constructor(6); let i = index">
-            <div class="deck-card border border-2 rounded-3 center hover-shadow my-2 text-black border-dark"
-              style="min-height: 190px">
-              <app-loading></app-loading>
+          @for (deck of decks; track deck) {
+            <div class="col-12">
+              <app-deck-card [deck]="deck" height="170px" (tagClick)="onTagClick($event)"></app-deck-card>
             </div>
-          </div>
+          }
         </div>
       </div>
-    </ng-template>
+    } @else {
+      <div class="container-fluid">
+        <div class="row">
+          @for (item of [].constructor(6); track item; let i = $index) {
+            <div class="col-12">
+              <div class="deck-card border border-2 rounded-3 center hover-shadow my-2 text-black border-dark"
+                style="min-height: 190px">
+                <app-loading></app-loading>
+              </div>
+            </div>
+          }
+        </div>
+      </div>
+    }
   </div>
   <div class="card-footer white">
     <a class="btn btn-success btn-rounded btn-lg" routerLink="/decks" [queryParams]="deckParams" role="button">
