--- a/src/app/shared/components/table-seating/table-seating.component.html
+++ b/src/app/shared/components/table-seating/table-seating.component.html
@@ -6,18 +6,20 @@
   <div class="modal-body">
     <div class="row row-cols-1 row-cols-sm-2 g-3">
       <form class="col" [formGroup]="form">
-        <div formArrayName="players" *ngFor="let player of players.controls; let i = index">
-          <div [formGroupName]="i" class="input-group mb-3">
-            <div class="input-group-text form-switch">
-              <input formControlName="active" class="form-check-input ms-0 mt-0" type="checkbox" role="switch"
-                [attr.aria-label]="t('active_player')">
+        @for (player of players.controls; track player; let i = $index) {
+          <div formArrayName="players">
+            <div [formGroupName]="i" class="input-group mb-3">
+              <div class="input-group-text form-switch">
+                <input formControlName="active" class="form-check-input ms-0 mt-0" type="checkbox" role="switch"
+                  [attr.aria-label]="t('active_player')">
+              </div>
+              <input formControlName="name" type="text" class="form-control" [attr.aria-label]="t('player_name')">
+              <button type="button" class="btn btn-outline-danger" (click)="removePlayer(i)">
+                <i aria-hidden="true" class="bi bi-trash"></i>
+              </button>
             </div>
-            <input formControlName="name" type="text" class="form-control" [attr.aria-label]="t('player_name')">
-            <button type="button" class="btn btn-outline-danger" (click)="removePlayer(i)">
-              <i aria-hidden="true" class="bi bi-trash"></i>
-            </button>
           </div>
-        </div>
+        }
         <div class="d-flex justify-content-between">
           <button type="button" class="btn btn-primary" (click)="addPlayer()">
             <i aria-hidden="true" class="bi bi-person"></i>
@@ -30,26 +32,31 @@
         </div>
       </form>
       <div class="col d-flex flex-column justify-content-center align-items-center">
-        <div *ngFor="let table of tables" class="m-5" [ngClass]="{
+        @for (table of tables; track table) {
+<div class="m-5" [ngClass]="{
         'seating-6': table.length === 6,
         'seating-5': table.length === 5,
         'seating-4': table.length === 4,
         'seating-3': table.length === 3
       }">
-          <ng-container *ngIf="table.length > 2">
-            <label *ngFor="let seat of table; let first=first" class="seat" [ngClass]="{
+            @if (table.length > 2) {
+              @for (seat of table; track seat; let first = $first) {
+<label class="seat" [ngClass]="{
           'first': first,
           'missing': seat === 'Missing'
           }">
-              <span *ngIf="seat === 'Missing'; else seatName">
-                {{ t('missing') }}
-              </span>
-              <ng-template #seatName>
-                {{ seat }}
-              </ng-template>
-            </label>
-          </ng-container>
-        </div>
+                  @if (seat === 'Missing') {
+                    <span>
+                      {{ t('missing') }}
+                    </span>
+                  } @else {
+                    {{ seat }}
+                  }
+                </label>
+              }
+            }
+          </div>
+        }
       </div>
     </div>
 
